--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,5 +22,9 @@
   },
   "emmet.syntaxProfiles": {
     "postcss": "css"
-  }
+  },
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
+  },
+  "eslint.validate": ["javascript", "javascriptreact"]
 }
