--- a/package.json
+++ b/package.json
@@ -5,7 +5,16 @@
   "version": "0.1.0",
   "author": "Flash Burst <john@example.com>",
   "dependencies": {
+    "@babel/core": "^7.14.3",
+    "@headlessui/react": "^1.2.0",
+    "@lingui/cli": "^3.9.0",
+    "@lingui/loader": "^3.9.0",
+    "@lingui/macro": "^3.9.0",
+    "@lingui/react": "^3.9.0",
+    "babel-plugin-macros": "^3.1.0",
+    "country-json": "^1.1.2",
     "gatsby": "^3.6.0",
+    "gatsby-background-image": "^1.5.3",
     "gatsby-plugin-gatsby-cloud": "^2.4.1",
     "gatsby-plugin-image": "^1.6.0",
     "gatsby-plugin-manifest": "^3.4.0",
@@ -15,6 +24,7 @@
     "gatsby-plugin-sharp": "^3.4.1",
     "gatsby-source-filesystem": "^3.4.0",
     "gatsby-transformer-sharp": "^3.4.0",
+    "gbimage-bridge": "^0.1.4",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -25,6 +35,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
+    "babel-preset-gatsby": "^1.6.0",
     "eslint": "^7.27.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.3",
@@ -51,6 +62,8 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
+    "i18n:extract": "NODE_ENV=test lingui extract",
+    "i18n:compile": "lingui compile",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "repository": {
