--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "description": "A simple starter to get up and developing quickly with Gatsby",
   "version": "0.1.0",
-  "author": "Flash Burst <john@example.com>",
+  "author": "Flash Burst",
   "dependencies": {
     "@babel/core": "^7.14.3",
     "@headlessui/react": "^1.2.0",
@@ -12,7 +12,7 @@
     "@lingui/macro": "^3.9.0",
     "@lingui/react": "^3.9.0",
     "babel-plugin-macros": "^3.1.0",
-    "country-json": "^1.1.2",
+    "detect-emoji-support": "^0.1.7",
     "gatsby": "^3.6.0",
     "gatsby-background-image": "^1.5.3",
     "gatsby-plugin-gatsby-cloud": "^2.4.1",
@@ -27,6 +27,7 @@
     "gbimage-bridge": "^0.1.4",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-country-flag": "^2.3.0",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-slick": "^0.28.1",
