--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby": "^3.6.0",
     "gatsby-background-image": "^1.5.3",
     "gatsby-plugin-gatsby-cloud": "^2.4.1",
+    "gatsby-plugin-google-analytics": "^3.6.0",
     "gatsby-plugin-image": "^1.6.0",
     "gatsby-plugin-manifest": "^3.4.0",
     "gatsby-plugin-offline": "^4.4.0",
